# robotArm

./: .gitattributes  .gitignore  DOFBOT_SSH连接指南.md  DOFBOT_配置文件速查手册.md  jetson_dofbot_web_control.py  main.py  project.md  track2_game_ai.py  参数记录.md  复刻qi资料下载清单.md
TactileRoboticArm/: README.md
TactileRoboticArm/hand_tracker/: README.md  main.py  pyproject.toml  workspace.py
TactileRoboticArm/hand_tracker/robot_control/: communicator.py  config.py  kinematics.py  tracker.py  utils.py
TactileRoboticArm/hand_tracker/urdf/: dofbot.urdf
TactileRoboticArm/jetson_nano_server/: README.md  main.py
jetson_nano_chess_code_export_20260709_202847/: EXPORT_MANIFEST.json  README.txt  dofbot_board_view.json  dofbot_cell_poses.json  dofbot_web_control.py  赛道二规则.md
jetson_nano_code_backup_20260709_171329/: dofbot_web_control.py
jetson_nano_code_export_20260709_202646/: EXPORT_MANIFEST.txt
jetson_nano_code_export_20260709_202646/current_core_files/: dofbot_cell_poses.json
jetson_nano_code_export_20260709_202646/local_project_related/: project.md
jetson_nano_code_export_20260709_202646/previous_backup_20260709_171329/: dofbot_cell_poses.json
web_control/: README.md  action_store.py  app.py  requirements.txt  robot_arm.py  vision.py
web_control/actions/: demo.json
web_control/static/: app.js  styles.css
web_control/templates/: index.html
